--- a/wp-content/themes/audio-active/css/audio-active-styles.css
+++ b/wp-content/themes/audio-active/css/audio-active-styles.css
@@ -297,7 +297,8 @@ a.bottom-bar-links {
     .carousel-text-container {
       position: relative; } }
   .carousel-text-container .row {
-    margin-right: 0px; }
+    margin-right: 0px;
+    margin-left: 0px; }
   .carousel-text-container .carousel-text-background {
     position: absolute;
     top: 0;
@@ -313,10 +314,10 @@ a.bottom-bar-links {
   .carousel-text-container .carousel-text {
     padding: 15px 40px 40px 40px;
     color: white; }
-    @media only screen and (max-width: 992px) {
+    @media only screen and (max-width: 767px) {
       .carousel-text-container .carousel-text {
-        padding-left: 15px;
-        padding-right: 15px; } }
+        padding-left: 5px;
+        padding-right: 5px; } }
   .carousel-text-container .carousel-body {
     font-size: 24px;
     font-weight: 400;
@@ -377,9 +378,12 @@ a.bottom-bar-links {
     display: -ms-flexbox;
     display: flex;
     position: absolute;
-    bottom: 6%;
+    bottom: 8%;
     top: auto;
     color: white; }
+    @media only screen and (max-width: 768px) {
+      .carousel-counter > .slide-number-text-container {
+        bottom: 5%; } }
     .carousel-counter > .slide-number-text-container > i {
       font-size: 0.8em; }
 
@@ -390,6 +394,9 @@ a.bottom-bar-links {
   bottom: 6%;
   top: auto;
   font-size: 25px; }
+  @media only screen and (max-width: 767px) {
+    .carousel-control {
+      bottom: 3%; } }
   .carousel-control .fa, .carousel-control .glyphicon {
     width: 40px;
     height: 40px;
@@ -499,8 +506,9 @@ a.bottom-bar-links {
       padding-left: 0; } }
 
 .set-text-padding {
-  padding-left: 40px; }
-  @media only screen and (max-width: 767px) {
+  padding-left: 20px;
+  padding-right: 20px; }
+  @media only screen and (max-width: 768px) {
     .set-text-padding {
       padding-left: 20px;
       padding-right: 20px; } }
@@ -641,8 +649,16 @@ article p {
     top: 0;
     right: 0;
     border-color: #ebebeb #ebebeb transparent transparent; }
+  @media only screen and (max-width: 992px) {
+    .latest-articles-post {
+      margin-bottom: 10px; } }
   .latest-articles-post .latest-articles {
-    margin-top: 20px; }
+    margin-top: 20px;
+    padding-left: 0px;
+    padding-right: 0px; }
+  @media only screen and (max-width: 768px) {
+    .latest-articles-post .article-module {
+      margin-bottom: 20px; } }
   .latest-articles-post .article-module .image-container {
     overflow: hidden;
     position: relative; }
@@ -651,14 +667,32 @@ article p {
       position: absolute;
       height: 0;
       width: 0;
-      border-width: 20px;
+      border-width: 10px;
       border-style: solid;
       top: 0;
       right: 0;
       border-color: white white transparent transparent; }
     .latest-articles-post .article-module .image-container a img {
       width: 100%;
-      height: auto; }
+      height: auto;
+      transform: scale(1);
+      transition: all 0.3s;
+      -webkit-transition: all 0.3s; }
+      .latest-articles-post .article-module .image-container a img:hover {
+        transform: scale(1.2);
+        transition: all 0.3s;
+        -webkit-transition: all 0.3s; }
+  .latest-articles-post .button-container {
+    margin-top: 10px; }
+    .latest-articles-post .button-container p {
+      margin-bottom: 0; }
+  .latest-articles-post .article-title {
+    margin-top: 10px;
+    margin-bottom: 0; }
+    .latest-articles-post .article-title a {
+      margin-bottom: 0;
+      color: #252525;
+      text-decoration: none; }
 
 .support-row {
   padding-left: 25px;
@@ -713,6 +747,11 @@ article p {
 .make-dontation {
   margin-top: 20px;
   margin-bottom: 20px; }
+  @media only screen and (max-width: 767px) {
+    .make-dontation {
+      width: 50%;
+      margin-top: -29px;
+      margin-left: 50%; } }
 
 .quote-block {
   overflow: hidden;
@@ -734,9 +773,22 @@ article p {
     border-color: white white transparent transparent; }
   @media only screen and (max-width: 767px) {
     .quote-block {
-      padding: 0px 20px;
+      overflow: hidden;
+      position: relative;
+      padding: 10px 20px 0px 20px;
       padding-bottom: 40px;
-      background-color: #0afff9; } }
+      background-color: #0afff9;
+      margin: 0px 5px 40px 5px; }
+      .quote-block::after {
+        content: '';
+        position: absolute;
+        height: 0;
+        width: 0;
+        border-width: 20px;
+        border-style: solid;
+        top: 0;
+        right: 0;
+        border-color: white white transparent transparent; } }
   .quote-block .fp-quote {
     font-size: 24px;
     line-height: 1.2;
@@ -931,8 +983,12 @@ img {
 .our-work-block {
   margin-top: 40px;
   margin-bottom: 10px;
-  padding-left: 25px;
-  padding-right: 25px; }
+  padding-left: 5px;
+  padding-right: 5px; }
+  @media only screen and (min-width: 768px) {
+    .our-work-block {
+      padding-left: 25px;
+      padding-right: 25px; } }
   .our-work-block .ourwork-articles-button {
     padding-bottom: 20px;
     border-bottom: solid 1px #ebebeb; }
@@ -1005,13 +1061,23 @@ img {
   position: relative; }
   @media only screen and (min-width: 768px) {
     .site-info {
-      margin-bottom: 20px; } }
+      margin-bottom: 20px;
+      margin-left: 5px;
+      margin-right: 5px; } }
 
 .site-copyright {
   position: relative; }
+  @media only screen and (max-width: 768px) {
+    .site-copyright {
+      margin-left: -15px;
+      margin-right: -15px; } }
 
 .site-info-bg {
   background-color: #3f3f3f; }
+  @media only screen and (max-width: 768px) {
+    .site-info-bg {
+      padding-left: 0;
+      padding-right: 0; } }
 
 .site-copyright-bg {
   background-color: #252525; }
